# pybot-organizer

./: .gitignore  MANIFEST.in  README.md  config.json  pyproject.toml
organizer/: config.py  core.py  main.py
src/: config.py  constants.py  main.py
