[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "organizer"
version = "0.1.1"
description = "A tool to organize your files by extension."
authors = [{ name = "Samuel John", email = "samuel.john.codes@gmail.com" }]
license = { text = "MIT" }

[project.scripts]
organizer = "organizer.main:main"

[tool.setuptools.packages]
find = {}
